--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
 # 站点信息
 title: Pokecub
 description: 斗志昂扬，七三最强
-url: https://pokecub-573.github.io/Jiao
+url: https://pokecub573.github.io/
 email: wzk1057398161@qq.com
 github: Pokecub-573
 # rss_url: /pages/atom.xml
